template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Username for the Virtual Machine."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Password for the Virtual Machine."
      }
    },
    "sslEmail": {
      "type": "string",
      "metadata": {
        "description": "Email address for Let's Encrypt."
      }
    },	
    "dnsNameForPublicIP": {
      "type": "string",
      "metadata": {
        "description": "Unique DNS Name for the Public IP used to access the Virtual Machine."
      }
    }
  },
  "variables": {
    "storageAccountName": "[concat(uniquestring(resourceGroup().id),'storage')]",
    "imagePublisher": "Canonical",
    "imageOffer": "0001-com-ubuntu-server-jammy",
    "OSDiskName": "jitsi-vhd",
    "imageSKU": "22_04-lts-gen2",
    "nicName": "jitsiNic",
    "addressPrefix": "10.0.0.0/16",
    "subnetName": "jitsiSubnet",
    "subnetPrefix": "10.0.0.0/24",
    "storageAccountType": "Standard_LRS",
    "publicIPAddressName": "jitsiPublicIP",
    "publicIPAddressType": "Dynamic",
    "vmStorageAccountContainerName": "vhds",
    "vmName": "jitsiVM",
    "vmSize": "Standard_B1s",
    "virtualNetworkName": "jitsiVNET",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
    "subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]",
    "apiVersion": "2015-06-15"
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageAccountName')]",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "accountType": "[variables('storageAccountType')]"
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIPAddressName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
        "dnsSettings": {
          "domainNameLabel": "[parameters('dnsNameForPublicIP')]"
        }
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
		"[concat('Microsoft.Network/networkSecurityGroups/', 'jitsi-nsg')]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnetRef')]"
              }
            }
          }
        ]
      }
    },
	{
		"name": "['jitsi-nsg']",
		"type": "Microsoft.Network/networkSecurityGroups",
		"apiVersion": "2016-09-01",
		"location": "[resourceGroup().location]",
		"properties": {
			"securityRules": [
				{
					"name": "default-allow-ssh",
					"properties": {
						"priority": 1000,
						"sourceAddressPrefix": "*",
						"protocol": "TCP",
						"destinationPortRange": "22",
						"access": "Allow",
						"direction": "Inbound",
						"sourcePortRange": "*",
						"destinationAddressPrefix": "*"
					}
				},
				{
					"name": "default-allow-http",
					"properties": {
						"priority": 1100,
						"sourceAddressPrefix": "*",
						"protocol": "TCP",
						"destinationPortRange": "80",
						"access": "Allow",
						"direction": "Inbound",
						"sourcePortRange": "*",
						"destinationAddressPrefix": "*"
					}
				},
				{
					"name": "default-allow-https",
					"properties": {
						"priority": 1200,
						"sourceAddressPrefix": "*",
						"protocol": "TCP",
						"destinationPortRange": "443",
						"access": "Allow",
						"direction": "Inbound",
						"sourcePortRange": "*",
						"destinationAddressPrefix": "*"
					}
				},
				{
					"name": "default-allow-voip1",
					"properties": {
						"priority": 1300,
						"sourceAddressPrefix": "*",
						"protocol": "UDP",
						"destinationPortRange": "3478",
						"access": "Allow",
						"direction": "Inbound",
						"sourcePortRange": "*",
						"destinationAddressPrefix": "*"
					}
				},
				{
					"name": "default-allow-voip2",
					"properties": {
						"priority": 1400,
						"sourceAddressPrefix": "*",
						"protocol": "TCP",
						"destinationPortRange": "5349",
						"access": "Allow",
						"direction": "Inbound",
						"sourcePortRange": "*",
						"destinationAddressPrefix": "*"
					}
				},
				{
					"name": "default-allow-voip3",
					"properties": {
						"priority": 1500,
						"sourceAddressPrefix": "*",
						"protocol": "UDP",
						"destinationPortRange": "10000",
						"access": "Allow",
						"direction": "Inbound",
						"sourcePortRange": "*",
						"destinationAddressPrefix": "*"
					}
				}
			]
		}
	},
    {
      "apiVersion": "2016-04-30-preview",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('vmName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('vmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[variables('imageSKU')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
		"managedDisk": {
		    "storageAccountType": "Standard_LRS"
		}		  
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": "true",
            "storageUri": "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName')), variables('apiVersion')).primaryEndpoints.blob)]"
          }
        }
      }
    },
	{
		"type": "Microsoft.Compute/virtualMachines/extensions",
		"name": "[concat(variables('vmName'),'/', 'jitsi-setup')]",
		"apiVersion": "['2015-06-15']",
		"location": "[resourceGroup().location]",
		"dependsOn": [
			"[concat('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
		],
		"properties": {
			"publisher": "Microsoft.Azure.Extensions",
			"type": "CustomScript",
			"typeHandlerVersion": "2.0",
			"autoUpgradeMinorVersion": true,
			"settings": {
				"fileUris": "[split('https://raw.githubusercontent.com/theonemule/jitsi-install/main/install.sh', ' ')]",
				"commandToExecute": "[concat('bash install.sh --hostname=', parameters('dnsNameForPublicIP'), '.', resourceGroup().location, '.cloudapp.azure.com --password=', parameters('adminPassword'), ' --username=', parameters('adminUsername'), ' --email=',  parameters('sslEmail'))]"
			}
		}
	}	
	
  ],
      "outputs": {
        "httpSite": {
            "type": "string",
            "value": "[concat('Browse to: ', parameters('dnsNameForPublicIP'), '.', resourceGroup().location, '.cloudapp.azure.com and logon with u:admin p:', parameters('adminPassword'))]"
        }
    }
}
